--- a/css/style.css
+++ b/css/style.css
@@ -366,3 +366,9 @@ footer.main-footer table.opening-hours tr td.hours {
         grid-template-columns: 1fr;
     }
 }
+
+/**
+    PAGE DOCTEUR
+ */
+ 
+ .nom_docteur 
