infos de contact dynamique

--- a/css/style.css
+++ b/css/style.css
@@ -372,5 +372,8 @@ footer.main-footer table.opening-hours tr td.hours {
  */
  
  .nom_docteur {
-     
+   font-size: 3em;
+   text-align: center;
  }
+ 
+ 
